option('blas',    type : 'string', value : 'internal', description: 'cblas library')
option('sparse',  type : 'boolean', value : true, description: 'Sparse matrix module')
option('monte',   type : 'boolean', value : true, description: 'Montecarlo module')
option('wavelet', type : 'boolean', value : true, description: 'Wavelet module')
option('ode',     type : 'boolean', value : true, description: 'ODE module')
option('siman',   type : 'boolean', value : true, description: 'Simulated anneal module')
option('integ',   type : 'boolean', value : true, description: 'Numeric integration module')
option('min',     type : 'boolean', value : true, description: 'Minimization module')
option('fit',     type : 'boolean', value : true, description: 'Linear fit module')
option('multifit',type : 'boolean', value : true, description: 'Non-linear least-squares fit module')

